--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 roxmltree = "0.14.1"
 sha2 = "0.9.4"
 hex = "0.4.3"
 serde_json = "1.0"
+object = "0.28.3"
+executable_memory = "0.1.2"
+
+# goblin = "0.5.1"
