--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ sha2 = "0.9.4"
 hex = "0.4.3"
 serde_json = "1.0"
 object = "0.28.3"
-executable_memory = "0.1.2"
+
+# executable_memory has a virtual memory leak on Linux, so work around that for now
+executable_memory = { git = "https://github.com/Benjins/rs-executable_memory.git", branch = "bns-fix-virtual-mem-leak" }
+# Previously:
+#executable_memory = "0.1.2"
 
 # goblin = "0.5.1"
